Memory Game- Fix Box Spacing (JT)

--- a/src/css/MemoryStyle.css
+++ b/src/css/MemoryStyle.css
@@ -65,20 +65,21 @@
   }
   
   .grid-card {
-      padding:5px;
-      background: beige;
+      justify-content: center;
+      background: #7fdcec;
       width:100%;
       height: 100%;
-      object-fit: contain;
       margin: auto;
+      object-fit: contain;
       border-radius: 25px;
     }
     .grid-card::after {
       content: "";
-      background: linear-gradient(to right, #7fdcec, #82f5e6);
+      justify-content: center;
+      background: beige;
       width: 100%;
       height: 100%;
-      position: absolute;
+      position: relative;
       top: 0;
       left: 0;
       transform: rotateY(0) perspective(100px);
@@ -86,7 +87,7 @@
       backface-visibility: hidden;
       border-radius: 25px;
     }
-    .grid-img {
+    .grid-img{
       height: 200px;
       width: 200px;
       object-fit: contain;
@@ -111,6 +112,7 @@
   .boxed {
   
     width: 800px;
+    display: flex;
     padding-right: 5px;
     padding-left: 5px;
     padding-top: 10px;
